Ajustes finais e finalização do projeto.